--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="photos\saquibn-modified.png" alt="profile pic">
+      <td><img src="saquibn-modified.png" alt="profile pic">
 
       </td>
       <td>
