--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </td>
       <td>
         <h1>Md Saquib Hussain </h1>
-        <h4><i></i><a href="D:\4.WEB DEVELOPMENT\PROJECTS\HTML-Personal site\contact.html">@Contact_me</a></i></h4>
+        <h4><i></i><a href="contact.html">@Contact_me</a></i></h4>
         <h4><i>B.Tech Computer science and Engineering <a href="https://www.iitism.ac.in/"><strong>IIT(ism)Dhanbad</strong></a></i></h4>
         <p>I'm Md Saquib Hussain Persuing Bachelor of Technology in Computer Science and Engineering(2020-24).
           I'm from Kolkata,West Bengal.
